fix wrapping on label-checkbox

--- a/client/assets/styles/scss/modals/modals-edit-ace.scss
+++ b/client/assets/styles/scss/modals/modals-edit-ace.scss
@@ -72,6 +72,7 @@
     .label-checkbox {
       color: $purple-lighter;
       padding: 0 12px 6px;
+      white-space: nowrap;
     }
 
     .input-checkbox {
